fixed bug with after element being too long at times

--- a/src/Components/Aside/Aside.css
+++ b/src/Components/Aside/Aside.css
@@ -79,6 +79,22 @@ aside {
     background-color: white;
 }
 
+.shorten-after {
+    max-height: 92px;
+}
+
+/* .pre-built__items::before {
+    content: "";
+    position: absolute;
+    top: -37.5px;
+    left: -65px;
+    height: 160%;
+    width: 2px;
+    z-index: 1;
+    background-color: black;
+    border: black solid 1px;
+} */
+
 .arrow {
     height: 24px;
     width: 24px;
